# flutter_video_view

./: CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: publish.yml
android/: build.gradle  build.gradle.kts  settings.gradle
darwin/: video_view.podspec
darwin/video_view/: Package.swift
example/: README.md  pubspec.yaml
example/android/: build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
example/android/app/: build.gradle  build.gradle.kts
example/ios/Runner/: AppDelegate.swift  Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart  main_advanced.dart  sources.dart  track_selector.dart  video_list.dart  video_player.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/runner/: my_application.cc
example/macos/: .gitignore
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/RunnerTests/: RunnerTests.swift
example/web/: VideoViewPlugin.js  flutter_bootstrap.js  index.html  manifest.json
example/windows/: CMakeLists.txt
ios/: video_view.podspec
lib/: video_view.dart
lib/src/: player.common.dart  player.dart  player.interface.dart  player.native.dart  player.web.dart  plugin.web.dart  widget.dart  widget.native.dart  widget.web.dart
linux/: CMakeLists.txt  video_view_plugin.c
linux/include/video_view/: video_view_plugin.h
macos/: video_view.podspec
macos/video_view/: Package.swift
web/: VideoViewPlugin.js
windows/: CMakeLists.txt  video_view_plugin.cpp
(+13 files in other folders)
